--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,14 @@ services: # Define os serviços que serão executados
     networks:
       - minha-rede
 
-  client: # Define o serviço client
+  client-station: # Define o serviço server
+    build: ./client-station
+    ports:
+      - "8081:8080"
+    networks:
+      - minha-rede
+
+  client-car: # Define o serviço client
     build: ./client-car
     networks:
       - minha-rede
